Bootstrap and Jquery feature implemented.

--- a/app/src/main/res/layout/activity_roadmap.xml
+++ b/app/src/main/res/layout/activity_roadmap.xml
@@ -45,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/about_roadmaps"
+                android:fontFamily="@font/font4"
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
@@ -56,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:text="Choose the role from below"
                 android:textSize="20dp"
+                android:fontFamily="@font/font6"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="@color/black"/>
