--- a/app/src/main/res/layout/cpp_programming.xml
+++ b/app/src/main/res/layout/cpp_programming.xml
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/about_cpp_programming"
                 android:layout_marginLeft="5dp"
+                android:fontFamily="@font/font4"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
@@ -62,6 +63,7 @@
                 android:text="Choose the topics from below"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/font6"
                 android:textAlignment="center"
                 android:textColor="@color/black"/>
 
