--- a/app/src/main/res/layout/computer_networks.xml
+++ b/app/src/main/res/layout/computer_networks.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/about_cn"
                 android:layout_marginLeft="5dp"
+                android:fontFamily="@font/font4"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
@@ -62,6 +63,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
+                android:fontFamily="@font/font6"
                 android:textColor="@color/black"/>
 
             <View
