--- a/app/src/main/res/layout/dsa.xml
+++ b/app/src/main/res/layout/dsa.xml
@@ -51,6 +51,7 @@
                 android:layout_margin="10dp"
                 android:layout_marginLeft="5dp"
                 android:justificationMode="inter_word"
+                android:fontFamily="@font/font4"
                 android:text="@string/about_dsa"
                 android:textSize="20dp"
                 android:textStyle="normal" />
@@ -61,6 +62,7 @@
                 android:text="Choose the data structure from below"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/font6"
                 android:textAlignment="center"
                 android:textColor="@color/black"/>
 
