--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -35,7 +35,7 @@
 
         <TextView
             android:id="@+id/profilename"
-            android:layout_width="150dp"
+            android:layout_width="155dp"
             android:layout_height="31dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
@@ -47,8 +47,9 @@
 
         <ImageView
             android:layout_width="60dp"
-            android:foregroundGravity="right"
+            android:foregroundGravity="center"
             android:layout_height="60dp"
+            android:paddingTop="8dp"
             android:src="@drawable/pfphoto" />
 
     </LinearLayout>
