--- a/app/src/main/res/layout/leetcode_solutions.xml
+++ b/app/src/main/res/layout/leetcode_solutions.xml
@@ -26,11 +26,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:padding="11dp"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
+            android:background="@drawable/layoutback"
             android:orientation="vertical">
 
             <TextView
@@ -46,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/about_leetcode_solutions"
+                android:fontFamily="@font/font4"
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
@@ -57,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:text="Choose the resources from below"
                 android:textSize="20dp"
+                android:fontFamily="@font/font6"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="@color/black"/>
