--- a/app/src/main/res/layout/oops.xml
+++ b/app/src/main/res/layout/oops.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/about_oops"
                 android:layout_marginLeft="5dp"
+                android:fontFamily="@font/font4"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
@@ -61,6 +62,7 @@
                 android:text="Choose the resources from below"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/font6"
                 android:textAlignment="center"
                 android:textColor="@color/black"/>
 
