--- a/app/src/main/res/layout/programming_languages.xml
+++ b/app/src/main/res/layout/programming_languages.xml
@@ -51,6 +51,7 @@
                 android:text="@string/about_programming_languages"
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
+                android:fontFamily="@font/font4"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
                 android:layout_margin="10dp"/>
@@ -62,6 +63,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
+                android:fontFamily="@font/font6"
                 android:textColor="@color/black"/>
 
             <View
