--- a/app/src/main/res/layout/software_engineering.xml
+++ b/app/src/main/res/layout/software_engineering.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/about_se"
                 android:layout_marginLeft="5dp"
+                android:fontFamily="@font/font4"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
@@ -59,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Choose the resources from below"
+                android:fontFamily="@font/font6"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
