--- a/app/src/main/res/layout/system_design.xml
+++ b/app/src/main/res/layout/system_design.xml
@@ -52,6 +52,7 @@
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
+                android:fontFamily="@font/font4"
                 android:textStyle="normal"
                 android:layout_margin="10dp"/>
 
@@ -62,6 +63,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
+                android:fontFamily="@font/font6"
                 android:textColor="@color/black"/>
 
             <View
