improvements in UI for DSA part-3 and landing page horizontal scroll bar images

--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -112,6 +112,7 @@
                             android:layout_height="150dp"
                             android:id="@+id/company1"
                             android:src="@drawable/mobility_companies"
+                            android:scaleType="centerCrop"
                             android:contentDescription="@string/app_name"/>
 
                         <TextView
@@ -137,6 +138,7 @@
                             android:id="@+id/company2"
                             android:layout_width="200dp"
                             android:layout_height="150dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/ecommerce_companies" />
 
                         <TextView
@@ -160,6 +162,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company3"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/crm_companies"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -182,6 +185,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company4"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/collaboration_companies"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -225,6 +229,7 @@
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="150dp"
+                            android:scaleType="centerCrop"
                             android:id="@+id/company6"
                             android:src="@drawable/communication_companies"/>
                         <TextView
@@ -248,6 +253,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company7"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/advertisement_companies"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -270,6 +276,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company8"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/payments_companies"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -292,6 +299,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company9"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/trading_compnaies"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -336,6 +344,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company11"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/gaming_companies"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -358,6 +367,7 @@
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:id="@+id/company12"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/entertainment_companies"/>
                         <TextView
                             android:layout_width="match_parent"
