--- a/app/src/main/res/layout/company_specific_general_layout.xml
+++ b/app/src/main/res/layout/company_specific_general_layout.xml
@@ -41,6 +41,7 @@
                 android:textSize="30dp"
                 android:id="@+id/about_company_heading"
                 android:textColor="@color/black"
+                android:fontFamily="@font/font1"
                 android:textAlignment="center"
                 android:textStyle="bold"/>
 
@@ -62,6 +63,7 @@
                 android:textSize="30dp"
                 android:id="@+id/hiring_details_heading"
                 android:textColor="@color/black"
+                android:fontFamily="@font/font1"
                 android:textAlignment="center"
                 android:textStyle="bold"/>
 
