--- a/app/src/main/res/layout/company_specific_general_layout.xml
+++ b/app/src/main/res/layout/company_specific_general_layout.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
@@ -32,17 +31,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="30dp"
                 android:id="@+id/about_company_heading"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:fontFamily="@font/font1"
-                android:textAlignment="center"
                 android:textStyle="bold"/>
 
             <TextView
@@ -50,8 +49,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:id="@+id/about_company_content"
-                android:fontFamily="@font/font6"
-                android:textAlignment="center"/>
+                android:fontFamily="@font/font6"/>
 
             <View
                 android:layout_width="match_parent"
@@ -62,9 +60,9 @@
                 android:layout_height="wrap_content"
                 android:textSize="30dp"
                 android:id="@+id/hiring_details_heading"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:fontFamily="@font/font1"
-                android:textAlignment="center"
                 android:textStyle="bold"/>
 
             <TextView
@@ -72,8 +70,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:id="@+id/hiring_details_content"
-                android:fontFamily="@font/font6"
-                android:textAlignment="center"/>
+                android:fontFamily="@font/font6" />
 
             <View
                 android:layout_width="match_parent"
