--- a/app/src/main/res/layout/advertisement_companies.xml
+++ b/app/src/main/res/layout/advertisement_companies.xml
@@ -69,8 +69,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/media.net"
-                android:src="@drawable/media_net_image"
+                android:id="@+id/media_dot_net"
+                android:src="@drawable/media_dot_net_image"
                 android:adjustViewBounds="true"/>
 
             <TextView
