--- a/app/src/main/res/layout/greedy.xml
+++ b/app/src/main/res/layout/greedy.xml
@@ -37,6 +37,21 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="20dp"
+                android:layout_margin="5dp"
+                app:cardElevation="10dp"
+                app:contentPadding="0dp">
+                <WebView
+                    android:id="@+id/greedy_video"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp" />
+
+
+            </androidx.cardview.widget.CardView>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -117,6 +132,40 @@
                         android:id="@+id/code_greedy_q2"
                         android:text="@string/code_greedy_q2"
                         android:visibility="gone"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:text="Download Full Resource File From Here"
+                android:layout_height="25dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:layout_margin="20dp"
+                app:cardElevation="10dp"
+                app:contentPadding="20dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/Linkshowgreedy"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:autoLink="web"/>
+
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
