➡️ ALL ACTIVITY VIDEO AND RESOURCES ARE DONE ✅  ➡️ System design✅  ➡️ Oops✅  ➡️ Dbms✅  ➡️ Bootstrap and Query In Web Development✅  ➡️ React✅  ➡️ Coding Practices✅  ➡️ Tips✅  ➡️ Most Important Coding Questions✅  ➡️ Roadmaps ✅

--- a/app/src/main/res/layout/bootstrap_and_jquery.xml
+++ b/app/src/main/res/layout/bootstrap_and_jquery.xml
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/buttonbag"
                 android:layout_centerInParent="true"
-                android:text="Bootstrap overview"/>
+                android:text="Bootstrap Overview"/>
 
             <View
                 android:layout_width="match_parent"
