--- a/app/src/main/res/layout/oops.xml
+++ b/app/src/main/res/layout/oops.xml
@@ -31,7 +31,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="10dp"
             android:background="@drawable/layoutback"
             android:orientation="vertical">
@@ -42,16 +42,16 @@
                 android:text="@string/oops_heading"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/about_oops"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:fontFamily="@font/font4"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
                 android:layout_margin="10dp"/>
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Choose the resources from below"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/font6"
                 android:textAlignment="center"
@@ -70,15 +70,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
 
-                <Button
-                    android:id="@+id/OOPS_btn1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/buttonbag"
-                    android:text="C++, OOPS IN C++"/>
+            <Button
+                android:id="@+id/OOPS_btn1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@drawable/buttonbag"
+                android:text="C++, OOPS IN C++" />
 
-                <View
+            <View
                     android:layout_width="match_parent"
                     android:layout_height="15dp"/>
 
