--- a/app/src/main/res/layout/questions.xml
+++ b/app/src/main/res/layout/questions.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <View
@@ -69,6 +70,39 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:text="Download From Here"
+                android:layout_height="25dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:layout_margin="20dp"
+                app:cardElevation="10dp"
+                app:contentPadding="20dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/Linkshowqtsn1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:autoLink="web"/>
+
+
+            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
