--- a/app/src/main/res/layout/resources_only_activity.xml
+++ b/app/src/main/res/layout/resources_only_activity.xml
@@ -14,14 +14,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
-
-            <WebView
-                android:id="@+id/web_view"
-                android:layout_width="match_parent"
-                android:layout_height="240dp" />
 
             <TextView
                 android:id="@+id/headline"
